--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "indexed": "^0.1.9",
+    "manifest": "^0.1.4",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   }
